feat(comfort): add comfort options (#30)
* feat(comfort): add snap turning

* feat(comfort): add teleport function

* feat(sound): add snap turn sound

* feat(comfort): add vignette effect

* build(deps): add Tobey.UnityAudio dependency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "ui",
         "player",
         "game",
-        "readme"
+        "readme",
+        "comfort",
+        "sound",
+        "deps"
     ]
 }
