ci: use release please config

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,5 +1,6 @@
 {
     "bump-minor-pre-major": true,
+    "release-type": "simple",
     "extra-files": [
         "plugin/TechtonicaVr.csproj",
         {
