--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -19,7 +19,7 @@ jobs:
           uses: google-github-actions/release-please-action@v4
           with:
             token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-            release-type: simple
+            config-file: release-please-config.json
         - name: Download release artifact
           if: ${{ steps.release.outputs.release_created }}
           uses: dawidd6/action-download-artifact@v2
