--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -26,6 +26,7 @@ jobs:
           with:
             workflow: "dotnet.yml"
             name: release-artifact
+            skip_unpack: true
         - name: Download Tobey.UnityAudio
           if: ${{ steps.release.outputs.release_created }}
           uses: dsaltares/fetch-gh-release-asset@1.1.1
@@ -37,6 +38,8 @@ jobs:
         - name: Zip release artifact
           if: ${{ steps.release.outputs.release_created }}
           run: |
+            mkdir artifact
+            unzip release-artifact.zip -d ./artifact/
             unzip Tobey.UnityAudio.zip -d ./artifact/
             cd artifact && zip -r techtonica_vr-${{ steps.release.outputs.tag_name }}.zip ./ && cd ..
             mv artifact/techtonica_vr-${{ steps.release.outputs.tag_name }}.zip .
@@ -45,7 +48,7 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: |
-            gh release upload ${{ steps.release.outputs.tag_name }} techtonica_vr-${{ steps.release.outputs.tag_name }}.zip
+            gh release upload ${{ steps.release.outputs.tag_name }} techtonica_vr-${{ steps.release.outputs.tag_name }}.zip --repo Xenira/TechtonicaVR
         - name: Upload to Thunderstore
           uses: GreenTF/upload-thunderstore-package@v4.1
           if: ${{ steps.release.outputs.release_created }}
