ci: fix thunderstore upload

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -41,7 +41,7 @@ jobs:
             mkdir artifact
             unzip release-artifact.zip -d ./artifact/
             unzip Tobey.UnityAudio.zip -d ./artifact/
-            cd artifact && zip -r techtonica_vr-${{ steps.release.outputs.tag_name }}.zip ./ && cd ..
+            cd artifact && npx downdoc README.adoc && zip -r techtonica_vr-${{ steps.release.outputs.tag_name }}.zip ./ && cd ..
             mv artifact/techtonica_vr-${{ steps.release.outputs.tag_name }}.zip .
         - name: Upload release artifact
           if: ${{ steps.release.outputs.release_created }}
@@ -54,11 +54,12 @@ jobs:
           if: ${{ steps.release.outputs.release_created }}
           with:
             namespace: "3_141"
-            community: Techtonica
+            community: techtonica
             name: TechtonicaVR
             description: VR mod for Techtonica
             categories: |
               mods
             file: techtonica_vr-${{ steps.release.outputs.tag_name }}.zip
             version: "${{ steps.release.outputs.major }}.${{ steps.release.outputs.major }}.${{ steps.release.outputs.patch }}"
+            repo: thunderstore.io
             token: ${{ secrets.THUNDERSTORE_KEY }}
