--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,8 @@ jobs:
           fetch-depth: 0
       - name: Check typos
         uses: crate-ci/typos@master
+        with:
+          config: .github/_typos.toml
   build:
     runs-on: ubuntu-latest
     defaults:
