--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -15,18 +15,19 @@ jobs:
     release-please:
       runs-on: ubuntu-latest
       steps:
+        - id: release
+          uses: google-github-actions/release-please-action@v4
+          with:
+            token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+            config-file: release-please-config.json
         - name: Download release artifact
+          if: ${{ steps.release.outputs.release_created }}
           uses: actions/download-artifact@v4
           with:
             name: release-artifact
             path: artifact
             run-id: ${{ github.event.workflow_run.id }}
             github-token: ${{ secrets.DEPENDENCY_TOKEN }}
-        - id: release
-          uses: google-github-actions/release-please-action@v4
-          with:
-            token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
-            config-file: release-please-config.json
         - name: Download Tobey.UnityAudio
           if: ${{ steps.release.outputs.release_created }}
           uses: dsaltares/fetch-gh-release-asset@1.1.1
