--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -39,7 +39,7 @@ jobs:
         - name: Zip release artifact
           if: ${{ steps.release.outputs.release_created }}
           run: |
-            cd artifact && npx downdoc README.adoc && zip -r techtonica_vr-${{ steps.release.outputs.tag_name }}-thunderstore.zip ./ && cd ..
+            cd artifact && npx downdoc -a env-github -a env-thunderstore README.adoc && zip -r techtonica_vr-${{ steps.release.outputs.tag_name }}-thunderstore.zip ./ && cd ..
             mv artifact/techtonica_vr-${{ steps.release.outputs.tag_name }}-thunderstore.zip .
             rm artifact/README.md
             unzip Tobey.UnityAudio.zip -d ./artifact/
