feat(ik)!: add ik support
BREAKING CHANGE: Mod folder structure has changed. Please remove the old mod entirely before installing this version.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,9 +61,10 @@ jobs:
       - name: Copy Files
         run: |
           mkdir -p ./artifact/BepInEx/plugins/techtonica_vr/assets && mkdir -p ./artifact/Techtonica_Data
-          cp techtonica_vr.* ./artifact/BepInEx/plugins
+          cp techtonica_vr.* ./artifact/BepInEx/plugins/techtonica_vr
           cp -r ./libs/* ./artifact/Techtonica_Data/
           cp -r ./unity/AssetBundles/StandaloneWindows/* ./artifact/BepInEx/plugins/techtonica_vr/assets
+          cp {README.adoc,CHANGELOG.md,LICENSE} ./artifact/BepInEx/plugins/techtonica_vr
           cp {README.adoc,CHANGELOG.md,LICENSE,manifest.json,icon.png} ./artifact/
       - name: Upload Release Asset Artifact
         uses: actions/upload-artifact@v4
