--- a/plugin/TechtonicaVr.csproj
+++ b/plugin/TechtonicaVr.csproj
@@ -20,8 +20,8 @@
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
     <PackageReference Include="techtonica-libs" Version="0.3.0-e" />
-    <PackageReference Include="PiUtils" Version="0.*" />
-    <PackageReference Include="TTIK" Version="0.*" />
+    <PackageReference Include="PiUtils" Version="0.2.0" />
+    <PackageReference Include="TTIK" Version="0.2.0" />
     <!-- <PackageReference Include="UnityEngine.Modules" Version="5.6.0" IncludeAssets="compile" /> -->
   </ItemGroup>
 
