--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+  MOD_NAME: "techtonica_vr"
+
 jobs:
   lint:
     name: Lint
@@ -45,8 +48,8 @@ jobs:
       with:
         name: plugin
         path: |
-          ./plugin/bin/Release/netstandard2.1/techtonica_vr.dll
-          ./plugin/bin/Release/netstandard2.1/techtonica_vr.pdb
+          ./plugin/bin/Release/netstandard2.1/${{ env.MOD_NAME }}.dll
+          ./plugin/bin/Release/netstandard2.1/${{ env.MOD_NAME }}.pdb
         if-no-files-found: error
 
   package:
@@ -60,11 +63,12 @@ jobs:
           name: plugin
       - name: Copy Files
         run: |
-          mkdir -p ./artifact/BepInEx/plugins/techtonica_vr/assets && mkdir -p ./artifact/Techtonica_Data
-          cp techtonica_vr.* ./artifact/BepInEx/plugins/techtonica_vr
-          cp -r ./libs/* ./artifact/Techtonica_Data/
-          cp -r ./unity/AssetBundles/StandaloneWindows/* ./artifact/BepInEx/plugins/techtonica_vr/assets
-          cp {README.adoc,CHANGELOG.md,LICENSE} ./artifact/BepInEx/plugins/techtonica_vr
+          mkdir -p ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/assets && mkdir -p ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/vr_config/StreamingAssets && mkdir -p ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/vr_config/UnitySubsystems
+          cp ${{ env.MOD_NAME }}.* ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}
+          cp -r ./libs/StreamingAssets/* ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/vr_config/StreamingAssets
+          cp -r ./libs/UnitySubsystems/* ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/vr_config/UnitySubsystems
+          cp -r ./unity/AssetBundles/StandaloneWindows/* ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}/assets
+          cp {README.adoc,CHANGELOG.md,LICENSE} ./artifact/BepInEx/plugins/${{ env.MOD_NAME }}
           cp {README.adoc,CHANGELOG.md,LICENSE,manifest.json,icon.png} ./artifact/
       - name: Upload Release Asset Artifact
         uses: actions/upload-artifact@v4
