--- a/plugin/TechtonicaVr.csproj
+++ b/plugin/TechtonicaVr.csproj
@@ -19,8 +19,9 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
-    <PackageReference Include="techtonica-libs" Version="0.3.0-e" />
-    <PackageReference Include="PiUtils" Version="0.3.0" />
+    <PackageReference Include="techtonica-libs" Version="0.4.0-c" />
+    <PackageReference Include="PiVRLoader" Version="0.1.0" />
+    <PackageReference Include="PiUtils" Version="0.4.0" />
     <PackageReference Include="TTIK" Version="0.2.2" />
     <!-- <PackageReference Include="UnityEngine.Modules" Version="5.6.0" IncludeAssets="compile" /> -->
   </ItemGroup>
@@ -32,6 +33,9 @@
     </Reference>
     <Reference Include="TTIK">
       <HintPath>..\..\TTIK\plugin\bin\Debug\netstandard2.1\ttik.dll</HintPath>
+    </Reference>
+    <Reference Include="pi_vr_loader">
+      <HintPath>..\..\PiVr\plugin\bin\Debug\netstandard2.1\pi_vr_loader.dll</HintPath>
     </Reference>
   </ItemGroup>
 
